--- a/source/css/_partial/fontawesome.less
+++ b/source/css/_partial/fontawesome.less
@@ -753,6 +753,8 @@
 .@{fa-css-prefix}-rss-square:before { content: @fa-var-rss-square; }
 .@{fa-css-prefix}-tag:before { content: @fa-var-tag; }
 .@{fa-css-prefix}-tags:before { content: @fa-var-tags; }
+.@{fa-css-prefix}-about:before { content: @fa-var-info-circle; }
+.@{fa-css-prefix}-categories:before { content: @fa-var-th-list; }
 .@{fa-css-prefix}-book:before { content: @fa-var-book; }
 .@{fa-css-prefix}-archives:before { content: @fa-var-archive; }
 .@{fa-css-prefix}-cc:before { content: @fa-var-cc; }
