--- a/source/css/style.less
+++ b/source/css/style.less
@@ -430,4 +430,5 @@ hr,
 @import '_partial/article';
 @import '_partial/archives';
 @import '_partial/tags';
+@import '_partial/categories';
 @import '_partial/highlight';
