--- a/layout/_partial/post/category.ejs
+++ b/layout/_partial/post/category.ejs
@@ -1,10 +1,6 @@
 <% if (post.categories && post.categories.length){ %>
-	<div class="article-category tagcloud">
-	<%- list_categories(post.categories, {
-	  show_count: false,
-	  class: 'article-category',
-	  style: 'none',
-	  separator: ''
-	}) %>
-	</div>
+    <%- list_categories(post.categories, {
+            show_count: false,
+            class: 'article-categories'
+          }) %>
 <% } %>
